--- a/mod00-01/index.html
+++ b/mod00-01/index.html
@@ -7,6 +7,12 @@
 	
 	<link href="https://fonts.googleapis.com/css?family=Fascinate+Inline|Oswald" rel="stylesheet">
 
+	<style type="text/css">
+		.red{
+			color: red;
+		}
+	</style>
+
 </head>
 <body> 
 	<div class="container">
