--- a/mod02-01/index.html
+++ b/mod02-01/index.html
@@ -79,5 +79,50 @@
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>
 
+	<hr>
+	<p><strong>Beware</strong> of dogs</p>
+
+	<hr>
+	<p>I <em>think</em> sheila was the first.</p>
+	<p>I think <em>sheila</em> was the first.</p>
+	<p>I think sheila was the <em>first.</em></p>
+
+	<hr>
+	<p> I was born on the 4<sup>th</sup> of November.</p>
+	<p>The amount of CO<sub>2</sub> in the atmosphere grew by 2ppm in 2010.</p>
+
+	<hr>
+	<p>
+		We use <abbr title="hyper text markup language">HTML</abbr> to create web pages.
+	</p>
+
+	<hr>
+
+	<blockquote cite="http://www.imdb.com/character/ch0000672/qoutes">
+		<p>You know the golden rule, don't you boy? 
+		Those who have the gold make the rules.</p>
+		<footer>- Crazy hunch-backed old guy in alladin</footer>
+	</blockquote>
+
+	<hr>
+	<p>
+		According to Mozilla's website, <q cite="http:/www.mozilla.org/en-US/about/history/details">Firefox 1.0 was released in 2004 and became a big sucess.</q>
+	</p>
+
+	<hr>
+
+	<p>
+		Luke continued, <q>And then she called him a <q>scruffy-looking nerf-herder! I think I've got a chance!</q> The poor naive fool...
+	</p>
+
+	<hr>
+	<p>
+		frankly, it was the <del>worst</del> <ins>best</ins> idea he had ever had.
+	</p>
+
+	<hr>
+	<p>
+		Buy this laptop now!<p><s>was $1000</s></p> <p>Now only $200</p>  
+	</p>
 </body>
 </html>
