--- a/mod02-01/index.html
+++ b/mod02-01/index.html
@@ -33,7 +33,7 @@
 
 	<hr>
 
-	<h1>Favorite Halloween Costume Idea</h1>
+	<h1 id="favorite">Favorite Halloween Costume Idea</h1>
 	<h2>Pick A Costume That Is Weather Appropriate</h1>
 	<h3>Costume Idea For Cold Weather</h3>
 	<h3>Costume Idea For Warm Weather</h3>
@@ -124,5 +124,69 @@
 	<p>
 		Buy this laptop now!<p><s>was $1000</s></p> <p>Now only $200</p>  
 	</p>
+
+	<hr>
+
+	<p>Authors are encouraged to use their best judgement when determining whether to use <small> or css <small> Posted on April 30</small></p>
+
+	<hr>
+	<a href="https://mail.google.com"> Google Mail</a>	
+
+	<hr>
+	<a href="music/reviews.html" target="_blank">Reviews Page</a>
+
+	<hr>
+	<a href="listings.html" target="_blank">Listings Page</a>
+
+	<hr>
+	<a href="music/Artists/index.html" target="_blank">Artists Page</a>
+
+	<hr>
+	<a href="mailto:pineda.dess@gmail.com">Email Us</a>
+
+	<hr>
+	<a href="#top">Back to top</a>
+
+	<hr>
+	<h1>How to make music</h1>
+	<ol>
+		<li>Listen to music daily</li>
+		<li>Find beats</li>
+		<li>Write your music</li>
+		<li>Create the scratch track</li>
+		<li>Get feedback!</li>
+	</ol>
+
+	<hr>
+	<h1>Ingridients</h1>
+	<ul>
+		<li>50g butter</li>
+		<li>2 eggs</li>
+		<li>10ml milk</li>
+		<li>Salt and pepper to taste</li>
+		<li>5 medium-sized orange</li>
+	</ul>
+
+	<hr>
+	<ul>
+		<li>Reptiles</li>
+		<li>Mammals</li>
+		<ul>
+			<li>Cow</li>
+			<li>cat</li>
+		</ul>
+		<li>Birds</li>
+		<li>Amphibians</li>
+	</ul>
+
+	<hr>
+	<dl>
+		<dt>Empathy</dt>
+		<dd>The imaginative projection of a subjective state into an object so that the object appears to be infussed with it</dd>
+
+		<dt>Impanel</dt>
+		<dd>to choose people to serve on a jury</dd>
+	</dl>	
+	
 </body>
 </html>
