--- a/mod02-01/index.html
+++ b/mod02-01/index.html
@@ -9,6 +9,12 @@
 			.red{
 			color: red;
 			}
+
+			table, tr, th, td {
+   			border-collapse: collapse;
+   			border: 1px solid black;
+   			
+			}
 		</style>
 
 
@@ -187,6 +193,163 @@
 		<dt>Impanel</dt>
 		<dd>to choose people to serve on a jury</dd>
 	</dl>	
+
+
+	<hr>
+	<img src="img/download.jfif" alt="One piece">
+
+	<hr>
+	<table>
+		<tr>
+			<td>1</td>
+			<td>2</td>
+			<td>3</td>
+		</tr>
+		<tr>
+			<td>4</td>
+			<td>5</td>
+			<td>6</td>
+		</tr>
+	</table>
+
+	<hr>
+	<table>
+		<tr>
+			<th></th>
+			<th>Saturday</th>
+			<th>Sunday</th>
+		</tr>
+		<tr>
+			<th>Tickets Sold</th>
+			<td>120</td>
+			<td>135</td>
+		</tr>
+		<tr>
+			<th>Total Sales</th>
+			<td>$600</td>
+			<td>$675</td>
+		</tr>
+	</table>
+
+	<hr>
+	<table>
+		<tr>
+			<th></th>
+			<th>9 AM</th>
+			<th>10 AM</th>
+			<th>11 AM</th>
+		</tr>
+		<tr>
+			<th>Monday</th>
+			<td colspan="2">Geography</td>
+			<td>Math</td>
+			<td>Art</td>
+		</tr>
+
+		<tr>
+			<th>Tuesday</th>
+			<td>Gym</td>
+			<td>Home</td>
+		</tr>
 	
+
+	<hr>
+	<tr>
+		<th></th>
+		<th>TV5</th>
+		<th></th>
+		<th>GMA</th>
+		<th>ABS-CBN</th>
+	</tr>
+
+	<tr>
+		<th>6 PM - 7 PM</th>
+		<td rowspan="2">Cartoons</td>
+		<td></td>
+		<td>comedy</td>
+		<td>News</td>
+	</tr>
+	<tr>
+		<th>7 PM - 8 PM</th>
+		<td>Sports</td>
+		<td>Currents Affairs</td>
+	</tr>
+</table>
+
+<hr>
+<form action="" method="">
+	<input type="text" name="username">
+	<input type="password" name="password">
+	
+	<hr>
+	
+	<input type="radio" name="genre" value="rock">Rock
+	<input type="radio" name="genre" value="pop">Pop
+	<input type="radio" name="genre" value="jazz">Jazz
+	
+	<hr>
+	
+	<input type="checkbox" name="fruit" value="apple">Apple
+	<input type="checkbox" name="fruit" value="orange">Orange
+	<input type="checkbox" name="fruit" value="melon">Melon
+	
+	<hr>
+
+	<input type="email" name="email">
+
+	<hr>
+
+	<input type="number" name="contract">
+	</form>
+
+	<hr>
+
+	<form action="" method="">
+		<input type="text" name="username">
+		<input type="password" name="password">
+		<input type="submit" name="signIn" value="signIn">
+		<input type="submit" name="signUp" value="signUp">
+	</form>
+
+	<hr>
+
+	<form action="" method="">
+		<select name="brand">
+			<option value="Uniqlo">Uniqlo</option>
+			<option value="Bench">Bench</option>
+			<option value="Penshoppe" selected>Penshoppe</option>
+		</select>
+		
+	</form>
+
+	<hr>
+
+	<form action="" method="">
+		<textarea></textarea>
+		<input type="file" name="song">
+		<input type="submit" name="submit">
+	</form>
+
+	<hr>
+
+	<form action="" method="">
+		<button>
+			<img src="img/download.jfif" alt="One piece">
+			One piece
+		</button>
+	</form>
+
+	<hr>
+
+	<form action="" method="">
+		<label for="username">Username</label>
+		<input type="text" name="username">
+		
+		<label for="password">Password</label>
+		<input type="password" name="password">
+
+		<input type="submit" name="signIn" value="signIn">
+		<input type="submit" name="signUp" value="signUp">
+	</form>
 </body>
 </html>
