--- a/mod02-01/index.html
+++ b/mod02-01/index.html
@@ -335,7 +335,7 @@
 	<form action="" method="">
 		<button>
 			<img src="img/download.jfif" alt="One piece">
-			One piece
+			One Piece!!
 		</button>
 	</form>
 
