Complete activity 2 for DOM

--- a/mod02-03/index2.html
+++ b/mod02-03/index2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Dom Activity 2 Diagram</title>
-	<h1>Your Full Name</h1>
+	<h1>Ma.Lourdes F. Pineda</h1>
 		<nav>
 			<ul>
 				<li>
@@ -45,16 +45,27 @@
 
 		<aside>
 			<h2>Categories</h2>
-		</aside>
 
-		<ul>
-			<li><a href="">Food</a></li>
-			<li><a href="">Travel</a></li>
-			<li><a href="">Music</a></li>
-			<li><a href="">Art</a></li>
-			<li><a href="">Code</a></li>
-		</ul>
+			<ul>
+				<li><a href="">Food</a></li>
+				<li><a href="">Travel</a></li>
+				<li><a href="">Music</a></li>
+				<li><a href="">Art</a></li>
+				<li><a href="">Code</a></li>
+			</ul>
 
-		<h2>Archives</h2>
+			<h2>Archives</h2>
+				<ul>
+				<li><a href="">January</a></li>
+				<li><a href="">February</a></li>
+				<li><a href="">March</a></li>
+				<li><a href="">April</a></li>
+				<li><a href="">May</a></li>
+			</ul>
+			</aside>
+
+		<footer>
+		"Copyright &copy; Tuitt Coding Bootcamp"
+		</footer>
 </body>
 </html>
