--- a/mod02-10/index.html
+++ b/mod02-10/index.html
@@ -19,8 +19,9 @@
 		
 			<div class="sidebar">Sidebar</div>
 			
-			<div class="content">
-			<img class="article-image" src="https://lorempixel.com/300/300/">	</img>
+				<div class="content">
+				
+				<img class="article-image" src="https://lorempixel.com/300/300/">	</img>
 			
 			<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   			eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -67,64 +68,91 @@
 	
 	<!--columns are floating elements-->
 	<div class="column">
-		<div class="avatar">	</div>
-		<h3 class="username">Juan Dela Cruz	</h3>
-		<p class="comment"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<div class="avatar">
+			<img src="https://lorempixel.com/300/300/">
+		</div>	
+			
+			<h3 class="username">Juan Dela Cruz	</h3>
+		
+			<p class="comment block-with-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<a class="read-more" href="#">Read More</a>
 	</div>
 	<div class="column">
-		<div class="avatar">	</div>
+		<div class="avatar">
+			<img src="https://lorempixel.com/300/300/"> 
+		</div>
+
 		<h3 class="username">Juan Dela Cruz	</h3>
-		<p class="comment"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<p class="comment block-with-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<a class="read-more" href="#">Read More</a>
+	</div>
+	
+	<div class="column">
+		<div class="avatar">
+			<img src="https://lorempixel.com/300/300/">
+		</div>
+			
+			<h3 class="username">Juan Dela Cruz	</h3>
+			<p class="comment block-with-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<a class="read-more" href="#">Read More</a>
+	</div>
+
+	<div class="column">
+		<div class="avatar">
+			<img src="https://lorempixel.com/300/300/">
+		</div>
+			
+			<h3 class="username">Juan Dela Cruz	</h3>
+			<p class="comment block-with-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<a class="read-more" href="#">Read More</a>
 	</div>
 	<div class="column">
-		<div class="avatar">	</div>
+		<div class="avatar">
+			<img src="https://lorempixel.com/300/300/">	
+		</div>
+		
 		<h3 class="username">Juan Dela Cruz	</h3>
-		<p class="comment"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<p class="comment block-with-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<a class="read-more" href="#">Read More</a>
 	</div>
 	<div class="column">
-		<div class="avatar"></div>
+		<div class="avatar">
+			<img src="https://lorempixel.com/300/300/">
+		</div>
+		
 		<h3 class="username">Juan Dela Cruz	</h3>
-		<p class="comment"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<p class="comment block-with-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	</div>
-	<div class="column">
-		<div class="avatar">	</div>
-		<h3 class="username">Juan Dela Cruz	</h3>
-		<p class="comment"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	</div>
-	<div class="column">
-		<div class="avatar">	</div>
-		<h3 class="username">Juan Dela Cruz	</h3>
-		<p class="comment"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<a class="read-more" href="#">Read More</a>
 	</div>
 
 </div>
