Floats and Clears Activity

--- a/mod02-11/index.html
+++ b/mod02-11/index.html
@@ -10,159 +10,159 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<!-- for image 3 -->
+	<div class="page1 clear ">
 	
-	<div class="bar">
-		<font color="white"><h2>Harrison's Internal Medicine</h2></font>
-	</div>
-	
+	<div class="container1 clear">
 
-
-	<div class="container">
-	
-		<div class="page clear ">
-		
-			<div class="sidebar">Sidebar</div>
-			
-				<div class="content">
+		<font color="white"><h2>Basic Principles and manifestations of Disease</h2></font>
 				
-				<img class="article-image" src="https://lorempixel.com/300/300/">	</img>
+			<div class="column1"></div>
 			
-			<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   			eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-			</p>
-
-			<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   			eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-			</p>
-
-			<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   			eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-			</p>
-
-			<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   			eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-			</p>
-			
-			
-			</div> <!--content-->
-
-		<!-- for debugging purposes -->
-		<div style="clear: both;"></div>
-
-		</div> <!--page-->
-	</div>
-	
-<div class="footer clear">
-	
-	<!--columns are floating elements-->
-	<div class="column">
-		<div class="avatar">
-			<img src="https://lorempixel.com/300/300/">
-		</div>	
-			
-			<h3 class="username">Juan Dela Cruz	</h3>
-		
-			<p class="comment block-with-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			<p><font color="white">	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   			eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<a class="read-more" href="#">Read More</a>
-	</div>
-	<div class="column">
-		<div class="avatar">
-			<img src="https://lorempixel.com/300/300/"> 
-		</div>
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum </font>
+			</p>
 
-		<h3 class="username">Juan Dela Cruz	</h3>
-		<p class="comment block-with-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<a class="read-more" href="#">Read More</a>
+			<p><font color="white">	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   			eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum </font>
+			</p>
+
+		</div>
 	</div>
+<br>
+
+<!-- for image 4 -->
+<div class="page1 clear ">
 	
-	<div class="column">
-		<div class="avatar">
-			<img src="https://lorempixel.com/300/300/">
-		</div>
+	<div class="container2 clear">
+
+		<font color="white"><h2>Harrison's Internal Medicine</h2></font>
+				
+			<div class="column2"></div>
 			
-			<h3 class="username">Juan Dela Cruz	</h3>
-			<p class="comment block-with-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			<p><font color="white">	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   			eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<a class="read-more" href="#">Read More</a>
-	</div>
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum </font>
+			</p>
 
-	<div class="column">
-		<div class="avatar">
-			<img src="https://lorempixel.com/300/300/">
-		</div>
-			
-			<h3 class="username">Juan Dela Cruz	</h3>
-			<p class="comment block-with-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			<p><font color="white">	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   			eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<a class="read-more" href="#">Read More</a>
-	</div>
-	<div class="column">
-		<div class="avatar">
-			<img src="https://lorempixel.com/300/300/">	
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum </font>
+			</p>
+
+			<p><font color="white">	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   			eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum </font>
+			</p>
 		</div>
+	</div>
+<br>
+
+<div class="page1 clear ">
+	
+	<div class="container3 clear">
 		
-		<h3 class="username">Juan Dela Cruz	</h3>
-		<p class="comment block-with-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<div class="column3"></div>
+
+			<p><font color="white">
+			
+			<h4>DIY Inexpensive gift for Valentines</h4></font>
+			
+			</p>
+			
+			<p><font color="white">	Astor000 </font></p>
+			<p><font color="white">	3,600,531 views</font></p>
+		
+		</div>
+	</div>
+<br>
+
+<div class="page1 clear ">
+	
+	<div class="container4 clear">
+		
+		<div class="column4"></div>
+
+			<p><font color="white">
+			
+			<h4>51 Smart Ideas For Apartment</h4></font>
+			
+			</p>
+			
+			<p><font color="white">	Lee Heather </font></p>
+			<p><font color="white">	3,600 views</font></p>
+		
+		</div>
+	</div>
+<br>
+
+<div class="page1 clear ">
+	
+	<div class="container6 clear">
+		
+		<div class="column6"></div>
+
+			<textarea name="myTextBox" cols="50" rows="5">
+				Add a comment...
+			</textarea>
+				<br/>
+				<button type="button">Cancel</button>
+				<button type="button">Add</button>
+		</div>
+	</div>
+<br>
+
+<div class="page1 clear ">
+	
+	<div class="container7 clear">
+		
+		<div class="column7"></div>
+
+		<p><font color="white">Juan Dela Cruz</font></p>
+		<p><font color="white"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<a class="read-more" href="#">Read More</a>
-	</div>
-	<div class="column">
-		<div class="avatar">
-			<img src="https://lorempixel.com/300/300/">
-		</div>
+		consequat.</font></p>
 		
-		<h3 class="username">Juan Dela Cruz	</h3>
-		<p class="comment block-with-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<div class="column8"></div>
+
+		<p><font color="white">Maria Santos</font></p>
+		<p><font color="white"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<a class="read-more" href="#">Read More</a>
+		consequat.</font></p>
+
+		
+		<div class="column9"></div>
+
+		<p><font color="white">Julia Chan</font></p>
+		<p><font color="white"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat.</font></p>
+
+
+		</div>
 	</div>
+<br>
 
-</div>
-
-	<!-- ./page -->
-</body>
 </html>
 
 	
