--- a/csp1/index.html
+++ b/csp1/index.html
@@ -12,15 +12,32 @@
 
 </head>
 
-<body bgcolor="#CACCD0">
+<body bgcolor="#434446">
 
+	<!-- for navbar -->
 	<ul>
 	  	<li><a class="active" href="#home">Home</a></li>
 	  	<li><a href="#romance">Romance</a></li>
 	  	<li><a href="#contact">Action</a></li>
+	  	<li><a href="#about">Fan Fiction</a></li>
 	  	<li><a href="#about">Comedy</a></li>
 	  	<li><a href="#about">Poems</a></li>
 	</ul>
+
+	<!-- for banner page -->
+	<br>
+	<div id="bannerpage" class="banner">
+		<div id="titlepage" class="title"></div>
+		
+	</div>
+	
+	<!-- log in area -->
+	<div class="login">
+		<h2 class="in"><font color="black">Sign In</font></h2>
+		<textarea class="username">Enter Username...</textarea>
+		<textarea class="password">Enter Password...</textarea>
+		<button class="btn">Submit</button>
+	</div>
 
 </body>
 </html>
