--- a/csp1/index.html
+++ b/csp1/index.html
@@ -33,11 +33,41 @@
 	
 	<!-- log in area -->
 	<div class="login">
+
 		<h2 class="in"><font color="black">Sign In</font></h2>
-		<textarea class="username">Enter Username...</textarea>
-		<textarea class="password">Enter Password...</textarea>
-		<button class="btn">Submit</button>
+		
+		<h2 class="user">Username</h2>
+		<textarea class="username"></textarea>
+		
+		<h2 class="pass">Password</h2>
+		<textarea class="password"></textarea>
+		<button class="btn"><h3 class="submit">Submit</h3></button>
+
 	</div>
+
+	<!-- Sign up area-->
+	<div class="signup">
+		<h2 class="up"><font color="black">Sign Up</font></h2>
+		
+		<h2 class="firstname">First Name</h2>
+		<textarea class="first"></textarea>
+		
+		<h2 class="lastname">Last Name</h2>
+		<textarea class="last"></textarea>
+		
+		<h2 class="username2">Username</h2>
+		<textarea class="user2"></textarea>
+
+		<h2 class="email">Email Address</h2>
+		<textarea class="email2"></textarea>
+
+		<button class="btn2"><h3 class="create">Create Account</h3></button>
+		
+	</div>
+
+
+	<!-- next multi item carousel -->
+
 
 </body>
 </html>
