--- a/csp1/index.html
+++ b/csp1/index.html
@@ -27,7 +27,11 @@
 	<!-- for banner page -->
 	<br>
 	<div id="bannerpage" class="banner">
-		<div id="titlepage" class="title"></div>
+		<div id="titlepage" class="title">
+			<h3 class="qoute">
+				<font color="white">The Journey of a lifetime starts with the turning of a page.</font>
+			<h3>
+		</div>
 		
 	</div>
 	
@@ -44,6 +48,7 @@
 		<button class="btn"><h3 class="submit">Submit</h3></button>
 
 	</div>
+
 
 	<!-- Sign up area-->
 	<div class="signup">
@@ -65,9 +70,79 @@
 		
 	</div>
 
+	<!-- list of best selling book from famous authors -->
+	<h2 class="best"><font color="white">Best Selling Books</h2>
+	
+	<div class="book1">
+		<img class="b1" src="image/book01.jpg">
+	</div>
+	
+	<div class="book2">
+		<img class="b2" src="image/book02.jpg">
+	</div>
+	
+	
 
-	<!-- next multi item carousel -->
+	<h2 class="top">
+		<font color="white">Top Story From Anonymous Author</font>
+	</h2>
+	
+	<!-- container for top book from unknown artist -->
+	<div class="topbook">
+		<img class="b3" src="image/book03.jpg">
+		<img class="b4" src="image/book04.jpg">
+		<img class="b5" src="image/book05.jpg">
+		<img class="b6" src="image/book06.jpg">
+		<img class="b6" src="image/book07.jpg">
+		
+	</div>
 
+	
+	<!-- image -->
+	<img class="b03" src="image/book03.jpg">
+		<h2 class="auth1"><font color="white">By:Lexy321</font></h2>
+		<h2 class="vote1"><font color="white">10,000 votes</font></h2>
+			<p class="p1">There once was a very popular question on the internet:
+			If one morning, you woke up and realized that your gender had changed, 
+			what would be your first reaction?
+			And someone on the internet had famously responded:
+			First, give your bros a good time!
+			Su Jian remembered that when he saw this reply, he had slapped the
+			table to express his admiration. What a good bro! Such loyalty!
+			But now that he actually encountered this strange situation himself, he could only feel an extremely ball-breaking alarm, shocked grief, and frightened anger. Fuck your mom! Ah, Fuck! Fuck it!
+			Oh, a correction. The above is grammatically incorrect. After all, poor Classmate Su Jian doesn’t have balls anymore.</p>
+
+
+	<img class="b04" src="image/book04.jpg">
+		<h2 class="auth2"><font color="white">By:chuross</font></h2>
+		<h2 class="vote2"><font color="white">9,500 votes</font></h2>
+			<p class="p2">Siya si Zylie. Hindi siya clumsy, galit lang siguro sa kanya ang sahig, bully lang talaga ang mga mesa't upuan. At yung mga pader? Humaharang lang talaga sila ng kusa sa daanan niya. Yan ang palagi niyang biro. Kasi nga, ang sabi nila, siya daw ang Reyna ng Kamalasan. Pero nang dumating ang eidolon ng school na si Silver Jeremy Torres sa buhay niya, isa rin ba itong malas na kailangan niyang iwasan?</p>
+
+
+	<img class="b05" src="image/book05.jpg">
+		<h2 class="auth3"><font color="white">By:daintee02</font></h2>
+		<h2 class="vote3"><font color="white">9,290 votes</font></h2>
+			<p class="p3">The story is about a cheerful high school student named Han Ye-won (Jung Da-bin). She is a sweet, clumsy and warm girl. On the other hand, there is Ji Eun-sung (Song Seung-heon), a student from a vocational school and a well-known bully. He is hot-tempered and rude but deep inside he longs to be loved.[4]
+
+			One day, clumsily, Ye-won leaves a message on the school website to reply to Eun-sung's impolite message. She is shocked when someone calls her cell phone and threatens her. Gradually, her best friend, Lee Kyung-won, tells her who Eun-sung is. He sends Ye-won a text message: He will wait for her in front of the main gate. She is so scared that she and Kyung-won decide to jump over the school wall. Unfortunately, the moment Ye-won jumps, Eun-sung is standing exactly at the other side of wall. She falls on him and their lips meet accidentally. Raising his voice, Eun-sung asks her to take responsibility; she is astonished. His friend explains that Eun-sung has never even held hands with a girl. Since she is the first girl who kissed him, as a consequence, she must marry him.</p>
+
+	<img class="b06" src="image/book06.jpg">
+		<h2 class="auth4"><font color="white">By:husby</font></h2>
+		<h2 class="vote4"><font color="white">7,590 votes</font></h2>
+			<p class="p4">The game starts with a deal taking place between the game's villains. A drug lord known as Tulio Mendoza is infuriated after being ripped off by a Russian businessman named Akimov. The two settle their problems and join forces. Meanwhile, two TNT agents, Ray Jackson and his partner, Lee-Ann Reid, are going to a diner. Jackson sits in the car, while Reid walks inside. While sitting at the counter, the car explodes with Jackson inside and Reid is captured by a gang known as the Baby Demons.</p>
+
+
+	<img class="b07" src="image/book07.jpg">
+		<h2 class="auth5"><font color="white">By:olsey</font></h2>
+		<h2 class="vote5"><font color="white">5,590 votes</font></h2>
+			<p class="p5">Charlotte Summers is the last virgin in her school; a school where taking virginity is a sport. The sport has five main contenders: Tyler Bradshaw, the mysterious bad boy; Alec Jennings, the all-star athlete; Ian Jameson, the cocky rich guy; Beckett Cartwright, the renowned genius; and Lucas Chandler, her best friend. With all these guys determined to win the title of the Virginator, will Charlotte make it out alive with her virginity?</p>
+	
+	<h2 class="bestpoem">
+		<font color="white">Best Poem From Anonymous Author</font>
+	</h2>
+
+	<!-- container for top poem -->
+	<div class="bestpoem2"></div>
 
 </body>
 </html>
