--- a/csp1/index.html
+++ b/csp1/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
 	<title>My First Capstone Project</title>
 
-	<link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist-dist/css/boostrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
@@ -16,8 +16,14 @@
 
 	<!-- for navbar -->
 	<ul>
-	  	<li><a class="active" href="#home">Home</a></li>
-	  	<li><a href="#romance">Romance</a></li>
+	  	<li>
+	  		<a class="active" href="file:///C:/Users/Night3/Documents/Lourdes%20Pineda/csp1/index.html">Home</a>
+	  	</li>
+
+	  	<li>
+	  		<a  target="_blank" href="file:///C:/Users/Night3/Documents/Lourdes%20Pineda/csp1/index2.html">Romance</a>
+	  	</li>
+	  	
 	  	<li><a href="#contact">Action</a></li>
 	  	<li><a href="#about">Fan Fiction</a></li>
 	  	<li><a href="#about">Comedy</a></li>
@@ -26,15 +32,17 @@
 
 	<!-- for banner page -->
 	<br>
+	
 	<div id="bannerpage" class="banner">
 		<div id="titlepage" class="title">
 			<h3 class="qoute">
 				<font color="white">The Journey of a lifetime starts with the turning of a page.</font>
 			<h3>
 		</div>
-		
 	</div>
 	
+	
+
 	<!-- log in area -->
 	<div class="login">
 
@@ -142,7 +150,13 @@
 	</h2>
 
 	<!-- container for top poem -->
-	<div class="bestpoem2"></div>
+	<div class="bestpoem2">
+		<img class="po1" src="image/poem1.jpg">
+		<img class="po2" src="image/poem2.jpg">
+		<img class="po3" src="image/poem3.jpg">
+		<img class="po4" src="image/poem4.jpg">
+
+	</div>
 
 </body>
 </html>
