--- a/csp1/index.html
+++ b/csp1/index.html
@@ -21,7 +21,7 @@
 	  	</li>
 
 	  	<li>
-	  		<a  target="_blank" href="file:///C:/Users/Night3/Documents/Lourdes%20Pineda/csp1/index2.html">Romance</a>
+	  		<a  target="_blank" href="index2.html">Romance</a>
 	  	</li>
 	  	
 	  	<li><a href="#contact">Action</a></li>
@@ -33,7 +33,8 @@
 	<!-- for banner page -->
 	<br>
 	
-	<div id="bannerpage" class="banner">
+	<div id="bannerpage"
+	 class="banner">
 		<div id="titlepage" class="title">
 			<h3 class="qoute">
 				<font color="white">The Journey of a lifetime starts with the turning of a page.</font>
