--- a/csp1/index.html
+++ b/csp1/index.html
@@ -17,9 +17,10 @@
 	<!-- for navbar -->
 	<ul>
 	  	<li>
-	  		<a class="active" href="file:///C:/Users/Night3/Documents/Lourdes%20Pineda/csp1/index.html">Home</a>
+	  		<a class="active" href="../index.html">Home</a>
 	  	</li>
-
+<!-- https://desss91.github.io/b3nc-pineda-lourdes/csp1/
+ -->
 	  	<li>
 	  		<a  target="_blank" href="index2.html">Romance</a>
 	  	</li>
