--- a/csp1/index.html
+++ b/csp1/index.html
@@ -17,7 +17,7 @@
 	<!-- for navbar -->
 	<ul>
 	  	<li>
-	  		<a class="active" href="../index.html">Home</a>
+	  		<a class="active" href="../index2.html">Home</a>
 	  	</li>
 <!-- https://desss91.github.io/b3nc-pineda-lourdes/csp1/
  -->
