--- a/mod05-02/index.html
+++ b/mod05-02/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-	<title>What Javascript Can Do</title>
+	<title>Simple JavaScript DOM Activity</title>
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 <body>
-	<div class="wrapper clear" id='pink-box'>
+
+	<div class="wrapper clear" id="violet-box">
 		<nav>
-			<div class="nav-box id="red"  onclick="redfunc()"></div>
-			<div class="nav-box id="orange" onclick="orangefunc()"></div>
-			<div class="nav-box id="yellow" onclick="yellowfunc()"></div>
-			<div class="nav-box id="green" onclick="greenfunc()"></div>
-			<div class="nav-box id="purple" onclick="purplefunc()"></div>
-			<div class="nav-box id="blue" onclick="bluefunc()"></div>
+			<div class="nav-box" id="red" onclick="redFunc()"></div>
+			<div class="nav-box" id="orange" onclick="orangeFunc()"></div>
+			<div class="nav-box" id="yellow" onclick="yellowFunc()"></div>
+			<div class="nav-box" id="green" onclick="greenFunc()"></div>
+			<div class="nav-box" id="blue" onclick="blueFunc()"></div>
+			<div class="nav-box" id="indigo" onclick="indigoFunc()"></div>
+			<div class="nav-box" id="violet" onclick="violetFunc()"></div>
 		</nav>
-		<div class="box id="redBox"></div>
-		<div class="box id="orangeBox"></div>
-		<div class="box id="yellowBox"></div>
-		<div class="box id="greenBox"></div>
-		<div class="box id="purpleBox"></div>
-		<div class="box id="blueBox"></div>
-	</div>
+		<div class="box" id="red-box"></div>
+		<div class="box" id="orange-box"></div>
+		<div class="box" id="yellow-box"></div>
+		<div class="box" id="green-box"></div>
+		<div class="box" id="blue-box"></div>
+		<div class="box" id="indigo-box"></div>
+	</div> <!-- /.wrapper -->
 
 	<script src="js/script.js"></script>
-
 
 </body>
 </html>
